fix(signpost): use correct trigger icon size and align padding

--- a/projects/angular/src/popover/signpost/_properties.signpost.scss
+++ b/projects/angular/src/popover/signpost/_properties.signpost.scss
@@ -14,7 +14,7 @@
       --clr-signpost-content-bg-color: var(--clr-color-neutral-0);
       --clr-signpost-content-border-color: var(--clr-color-neutral-500);
 
-      --clr-signpost-action-icon-dimension: #{variables.$clr_baselineRem_1}; // to be removed when shim is fully integrated
+      --clr-signpost-action-icon-size: #{variables.$clr_baselineRem_1}; // to be removed when shim is fully integrated
       --clr-signpost-action-color: var(--clr-color-neutral-600);
       --clr-signpost-action-icon-color: var(--clr-btn-link-color);
       --clr-signpost-action-hover-color: var(--clr-color-action-700);
@@ -25,14 +25,12 @@
       --clr-signpost-pointer-border: #{signpost-variables.$clr-signpost-pointer-border};
       --clr-signpost-pointer-invisible-border: #{signpost-variables.$clr-signpost-pointer-invisible-border};
       --clr-signpost-pointer-psuedo-border: #{signpost-variables.$clr-signpost-pointer-psuedo-border};
-      --clr-signpost-content-padding: #{variables.$clr_baselineRem_1};
       --clr-signpost-content-color: var(--clr-color-neutral-700);
 
       --clr-signpost-content-header-position: absolute;
-      --clr-signpost-content-header-padding: 0;
       --clr-signpost-content-close-button-line-height: inherit;
-      --clr-signpost-content-close-button-dimensions: #{variables.$clr_baselineRem_1};
-      --clr-signpost-content-close-icon-dimensions: #{variables.$clr_baselineRem_0_667};
+      --clr-signpost-content-close-button-size: #{variables.$clr_baselineRem_1};
+      --clr-signpost-content-close-icon-size: #{variables.$clr_baselineRem_0_667};
     }
   }
 }
